--- a/spellingcorrector.ipynb
+++ b/spellingcorrector.ipynb
@@ -46,22 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'hang'"
+       "'type'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "correction(\"zhang\")"
+    "correction(\"typo\")"
    ]
   },
   {
